# essentia_spectrogram_flutter

./: README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
android/src/main/kotlin/one/beagile/essentia_spectrogram_flutter/: AudioDecoder.kt  EssentiaSpectrogramFlutterPlugin.kt  MelSpectrogramCompute.kt  NativeBridge.kt
android/src/test/kotlin/com/example/essentia_spectrogram_flutter/: EssentiaSpectrogramFlutterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/essentia_spectrogram_flutter_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
example/test_driver/: integration_test.dart
ios/: essentia_spectrogram_flutter.podspec
ios/Classes/: EssentiaBridge.h  EssentiaBridge.mm  EssentiaSpectrogramFlutterPlugin.swift
ios/Frameworks/Essentia.xcframework/: Info.plist
ios/Headers/essentia/essentia/: version.h
lib/: essentia_spectrogram_flutter.dart  essentia_spectrogram_flutter_method_channel.dart  essentia_spectrogram_flutter_platform_interface.dart  mel_spectrogram_plot.dart
test/: essentia_spectrogram_flutter_method_channel_test.dart
